--- a/css/layout.css
+++ b/css/layout.css
@@ -209,7 +209,7 @@ ul#nav li.current a { color: #fff; }
 /* Hero Image */
 .hero-image {
    width: 100%;
-   margin: 0 auto;
+   margin: 0 25%;
 }
 .hero-image img {
    vertical-align: bottom;
