--- a/css/layout.css
+++ b/css/layout.css
@@ -214,6 +214,7 @@ ul#nav li.current a { color: #fff; }
 .hero-image img {
    vertical-align: bottom;
    display: block;
+   width: 50%;
 }
 
 /* Hero CTA Buttons */
